resolved issues in change password alignment, validation in chat

--- a/src/components/personalInfo/tabPages/userform.css
+++ b/src/components/personalInfo/tabPages/userform.css
@@ -76,7 +76,7 @@ label {
     padding: 0.375rem 0.75rem;
   }
   .inputstyle-css-changepassword{
-    width: 280px !important;
+    /* width: 280px !important; */
     height: 50px;
     border-radius: 40px;
     border: 1px solid var(--Neutral-400, #94a3b8);
@@ -92,12 +92,12 @@ label {
    max-width: 230px;
    }
 
-   .inputstyle-css-changepassword{
+   /* .inputstyle-css-changepassword{
     margin-left: -38px;
    }
    .input-label-changepassword{
     margin-left: -38px;
-   }
+   } */
   }
 
 
@@ -126,6 +126,27 @@ padding-top: 60px;
   flex-direction: row;
   /* justify-content: flex-end; */
 }
+
+@media (min-width: 900px)and (max-width: 1022px) {
+  .inputstyle-css-changepassword {
+    width: 60%;
+  }
+}
+
+
+@media (min-width: 1023px) and (max-width: 1200px) {
+  .inputstyle-css-changepassword {
+    width: 65%;
+  }
+}
+
+@media (min-width: 1201px) {
+  .inputstyle-css-changepassword {
+    width: 80%;
+  }
+}
+
+
 
 
 
